<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".ActivityNumbers">

    <Button
        android:id="@+id/btGenerate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClickGenerate"
        android:paddingVertical="15dp"
        android:text="@string/bt_generate_title"
        android:textColor="#57D724"
        android:textSize="34sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <CheckedTextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_numbers_result_start_text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btGenerate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="#00BCD4"
        android:orientation="vertical"
        app:circularflow_radiusInDP="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_range_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etRangeStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#BEDCEA"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_range_start_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="45dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etRangeEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#BEDCEA"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_range_end_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="45dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_quantity_numbers_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etQuantityNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#BEDCEA"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_quantity_numbers_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="45dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>